# phileas

./: .gitignore  .pre-commit-config.yaml  Changelog.md  Readme.md  bump_version.sh  justfile  pyproject.toml  tox.ini
.github/workflows/: deployment.yaml  joss-paper.yaml  tests.yaml
doc/source/: conf.py  index.md  index.rst
doc/source/api/: index.md
doc/source/developer_notes/: index.md
doc/source/examples/: index.md  sca.md
doc/source/getting_started/: index.md  installation.md  simple_example.md
doc/source/user_guide/: bench_state.md  experiment_configuration_file.md  implementing_loaders.md  index.md  iteration_trees.md
joss-paper/: paper.bib  paper.md
joss-paper/figures/: acquisition_process.typ  experiment_bench.typ
phileas/: __init__.py  __main__.py  benchmark.py  cli.py  factory.py  iteration.py  mock_instruments.py  parsing.py
phileas/iteration/: __init__.py  base.py  leaf.py  node.py  random.py  utility.py
src/: lib.rs
test/: functional_1.py  functional_1_bench.yaml  functional_1_config.py  functional_1_experiment.yaml  functional_2.py  functional_2_bench.yaml  functional_2_experiment.yaml  test_cli.py  test_factory.py  test_iteration.py  test_parsing.py  utilities.py
