[tool.poetry]
name = "phileas"
version = "0.4"
description = ""
authors = ["Louis Dubois <louis.dubois@ssi.gouv.fr>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.9,<3.14"
graphviz = "^0.20.3"
rich = "^14.0.0"
ruamel-yaml = "^0.18.10"
jinja2 = "^3.1.6"
numpy = "^2.0"
xarray = "^2024.7"
pandas = "^2.2.3"
matplotlib = "^3.9"
jupyterlab = "^4.4.2"
dacite = "^1.9.2"
sympy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18"
ipdb = "^0.13.13"
pre-commit = "^4.2.0"
hypothesis = "^6.131.17"
coverage = "^7.8.0"
mypy = "^1.15.0"
pandas-stubs = "^2.2"
sphinx = "^7"
sphinx-autobuild = "^2024.10.3"
pydata-sphinx-theme = "^0.16.1"
myst-nb = "^1.2.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
jupytext = "^1.17.1"

[tool.poetry.extras]
xarray = ["xarray"]
pandas = ["pandas"]
notebooks = ["matplotlib", "xarray", "pandas", "jupyterlab"]
sympy = ["sympy"]

[tool.poetry.scripts]
phileas = 'phileas.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
omit = [
    "./test/",
    "./tox",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError()",
]
include = [
    "./phileas/**"
]

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true
